--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" ng-app></html>
+<html lang="en" ng-app>
+
+</html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AngularJS Hello world</title>
 </head>
-<body>
-    Name: <input type="text" ng-model="name"/>
+<body ng-init="name='Claudia'">
+    <div ng-hide="isHidden">
+    Name: <input type="text" ng-model="name" /> <span ng-bind="name"></span>
+    </div>
+    Hide: <input type="checkbox" ng-model="isHidden" />
     <br />
-    {{ name }}
+    <button ng-click="name='Patricia'">Change name</button>
     <script src="angular.js"></script>
 </body>
+
 </html>
