Try 3 examples of using modules and controllers in AngularJS

--- a/UsingControllers/index.html
+++ b/UsingControllers/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html ng-app="customersModule">
+<html ng-app="customersApp">
 <head>
     <title>Iterating Over Data</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
-<body ng-controller="customersController">
+<body ng-controller="CustomersController">
     <h2>Customers</h2>
     Filter: <input type="text" ng-model="customerFilter.name" />
     <br /><br />
@@ -23,10 +23,10 @@
         </tr>
     </table>
     <br />
-    <span>Total customers: {{customers.length }}</span>
+    <span>Total customers: {{ customers.length }}</span>
 
     <script src="angular.js"></script>
-    <script src="../app/app.js"></script>
-    <script src="../app/controllers/customersController.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/controllers/customersController.js"></script>
 </body>
 </html>
